Fix unnecessary horizontal scroll area in pipeline visualizations

--- a/app/assets/stylesheets/pages/pipelines.scss
+++ b/app/assets/stylesheets/pages/pipelines.scss
@@ -265,7 +265,6 @@
 
 .pipeline-visualization {
   position: relative;
-  min-width: 1220px;
 
   ul {
     padding: 0;
